--- a/index.html
+++ b/index.html
@@ -8,19 +8,52 @@
 </head>
 <body>
   <section id="side-bar">
-
+    
+    <div class="side-bar-heading">
+      <img src="images/odin-lined.png" alt="odin logo" class="logo">
+      <p>ODIN</p>
+    </div>
+    <p class="side-bar-footer">
+      Photo by <a href="https://unsplash.com/@claybanks" target="_blank" rel="noopener">Clay Banks</a> on 
+      <a href="https://unsplash.com/photos/waterfalls-under-gray-sky-pCBn8dsdnGc" target="_blank" rel="noopener">Unsplash</a>
+    </p>
   </section>
 
-  <div class="container">
+  <div class="right-container">
     <section id="top">
-      
+      <p>This is not a real online service! You know you need something like this in your life to helo you realize your deepest dreams.</p>
+      <p>Sign up <em>now</em> to get started.</p> 
+      <br>
+      <p>You <em>know</em> you want to.</p>
     </section>
 
-    <form action="">
-
+    <form action="#" method="get">
+      <div class="form-container">
+        <h2>Let's do this!</h2>
+        <div class="form-row">
+          <label for="first-name">FIRST NAME</label>
+          <input type="text" name="first-name" id="first-name">
+          <label for="last-name">LAST NAME</label>
+          <input type="text" name="last-name" id="last-name">
+        </div>
+        <div class="form-row">
+          <label for="email">EMAIL</label>
+          <input type="email" name="email" id="email">
+          <label for="phno">PHONE NUMBER</label>
+          <input type="tel" name="phone-number" id="phno">
+        </div>
+        <div class="form-row">
+          <label for="password">PASSWORD</label>
+          <input type="password" name="password" id="password">
+          <label for="confirm-password">CONFIRM PASSWORD</label>
+          <input type="password" name="confirm-password" id="confirm-password">
+        </div>
+      </div>
+      <button>Create Account</button>
+      <p>Already have an account? <a href="#">Log in</a></p>
     </form>
 
-    <section id="botton">
+    <section id="bottom">
 
     </section>
   </div>
