--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ysabeau+Infant:ital,wght@0,1..1000;1,1..1000&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <title>Sign-up form</title>
 </head>
-<body>
+<body class="ysabeau-infant-body">
   <section id="side-bar">
     
     <div class="side-bar-heading">
@@ -20,42 +23,53 @@
   </section>
 
   <div class="right-container">
-    <section id="top">
-      <p>This is not a real online service! You know you need something like this in your life to helo you realize your deepest dreams.</p>
+    <section class="form-top">
+      <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
       <p>Sign up <em>now</em> to get started.</p> 
       <br>
       <p>You <em>know</em> you want to.</p>
     </section>
 
-    <form action="#" method="get">
+    <form action="#" method="get" class="form">
       <div class="form-container">
-        <h2>Let's do this!</h2>
+        <p class="form-heading">Let's do this!</p>
         <div class="form-row">
-          <label for="first-name">FIRST NAME</label>
-          <input type="text" name="first-name" id="first-name">
-          <label for="last-name">LAST NAME</label>
-          <input type="text" name="last-name" id="last-name">
+          <div class="form-element">
+            <label for="first-name">FIRST NAME</label>
+            <input type="text" name="first-name" id="first-name" required>
+          </div>
+          <div class="form-element">
+            <label for="last-name">LAST NAME</label>
+            <input type="text" name="last-name" id="last-name">
+          </div>
         </div>
         <div class="form-row">
-          <label for="email">EMAIL</label>
-          <input type="email" name="email" id="email">
-          <label for="phno">PHONE NUMBER</label>
-          <input type="tel" name="phone-number" id="phno">
+          <div class="form-element">
+            <label for="email">EMAIL</label>
+            <input type="email" name="email" id="email" required>
+          </div>
+          <div class="form-element">
+            <label for="phno">PHONE NUMBER</label>
+            <input type="tel" name="phone-number" id="phno" required>
+          </div>
         </div>
         <div class="form-row">
-          <label for="password">PASSWORD</label>
-          <input type="password" name="password" id="password">
-          <label for="confirm-password">CONFIRM PASSWORD</label>
-          <input type="password" name="confirm-password" id="confirm-password">
+          <div class="form-element">
+            <label for="password">PASSWORD</label>
+            <input type="password" name="password" id="password" required>
+          </div>
+
+          <div class="form-element">
+            <label for="confirm-password">CONFIRM PASSWORD</label>
+            <input type="password" name="confirm-password" id="confirm-password" required>
+          </div>
         </div>
       </div>
-      <button>Create Account</button>
-      <p>Already have an account? <a href="#">Log in</a></p>
+      <div class="form-bottom">
+        <button>Create Account</button>
+        <p>Already have an account? <a href="#">Log in</a></p>
+      </div>
     </form>
-
-    <section id="bottom">
-
-    </section>
   </div>
 </body>
 </html>
